--- a/src/common/styles/_variables.scss
+++ b/src/common/styles/_variables.scss
@@ -1,10 +1,14 @@
 // Content
-$content-width: 950px;
+$content-width       : 950px;
+$content-width-tablet: 100vw;
+$content-width-mobile: 100vw;
 
 // Header
-$header-width      : 100%;
-$header-height     : 50px;
-$header-height-hide: -50px;
+$header-width  : 100%;
+$header-height : 50px;
+
+$header-width-mobile  : 100vw;
+$header-height-mobile : 50px;
 
 $header-left-width  : calc($content-width / 100 * 25);
 $header-center-width: calc($content-width / 100 * 50);
@@ -15,49 +19,83 @@ $header-btn-height   : 32px;
 $header-btn-font-size: 24px;
 
 // Loading
-$loading-width : 70px;
-$loading-height: 70px;
-$loading-color : #2272FF;
+$loading-width        : 70px;
+$loading-height       : 70px;
+$loading-width-tablet : 60px;
+$loading-height-tablet: 60px;
+$loading-width-mobile : 60px;
+$loading-height-mobile: 60px;
+$loading-color        : #2272FF;
 
 // Nav
-$nav-width      : 100%;
-$nav-height     : 50px;
-$nav-height-hide: -50px;
+$nav-width             : 100%;
+$nav-height            : 50px;
+$nav-width-tablet      : 100vw;
+$nav-height-tablet     : 50px;
+$nav-width-mobile      : 100vw;
+$nav-height-mobile     : 50px;
+$nav-height-hide       : -50px;
 // Nav item
-$nav-item-width : calc(($content-width - $loading-width) / 4);
+$nav-item-width        : calc(($content-width - $loading-width) / 4);
+$nav-item-width-tablet : calc(($content-width-tablet - $loading-width) / 4);
+$nav-item-width-mobile : calc(($content-width-mobile - $loading-width) / 4);
 
 // Nav item color
 $bar-item-hover-color: #ccc;
 
 // button
-$button-width : 400px;
+$sign-button-width        : 400px;
+$sign-button-width-mobile : calc($content-width-mobile - 100px);
 // button color
 
+//
+$content-padding-top          : 15px;
+$content-padding-side         : 20px;
+$content-padding-bottom       : 25px;
+$content-padding-top-mobile   : 10px;
+$content-padding-side-mobile  : 15px;
+$content-padding-bottom-mobile: 10px;
 
 //
-$content-min-height       : calc(100vh - $header-height - $nav-height);
 $content-inside-width     : calc($content-width - 40px);
-$content-inside-min-height: calc($content-min-height - 40px);
+$content-height           : calc(100vh - $header-height - $nav-height);
+$content-inside-min-height: calc($content-height - 40px);
+
+$content-inside-width-mobile : calc($content-width-mobile - $content-padding-side * 2);
+$content-height-mobile       : calc(100vh - $header-height-mobile - $nav-height-mobile - $content-padding-top-mobile - $content-padding-bottom-mobile);
+
 
 // Category item
 $category-item-width    : calc(100% / 5);
-$category-item-height   : 150px;
+$category-item-height   : 160px;
 $category-item-img-width: 90px;
+
+$category-item-width-mobile    : 45%;
+$category-item-height-mobile   : 160px;
+$category-item-img-width-mobile: 80px;
 
 // Result nav
 $result-nav-height: 40px;
 
 // Result nav item
-$result-nav-item-width     : calc($content-inside-width / 3);
+$result-nav-item-width     : calc($content-inside-width / 2);
 $result-nav-item-height    : 35px;
 $result-nav-item-font-size : 18px;
+
+//
+$result-item-height : 40px;
+
+//
+$result-item-width-mobile  : 45%;
+$result-item-height-mobile : 40px;
+
 
 // Result
 $result-header-font-size: 24px;
 
 // Manage menu
 $manage-menu-header-height: 40px;
-$manage-menu-item-height: 30px;
+$manage-menu-item-height  : 30px;
 
 $manage-title-font-size: 24px;
 
@@ -72,7 +110,7 @@ $text-color-bar-active: #000;
 
 // Background color
 $bg-color      : #fff;
-$bg-color-bar  : #eee;
+$bg-color-bar  : #fff;
 $bg-color-hover: #eee;
 
 
@@ -81,3 +119,6 @@ $form-width          : 400px;
 $form-height         : 600px;
 $form-title-font-size: 50px;
 $form-button-width   : 250px;
+
+$form-width-mobile : calc($content-width-mobile - $content-padding-side-mobile);
+$form-height-mobile : $content-height-mobile;
