--- a/src/containers/components/Manage/ManageBar/ManageBar.scss
+++ b/src/containers/components/Manage/ManageBar/ManageBar.scss
@@ -1,6 +1,6 @@
 @import 'src/common/styles/variables';
 
-.manage-option {
+.manage-bar {
   width          : 80%;
   margin-bottom  : 15px;
   display        : flex;
