--- a/src/containers/components/Result/Result.scss
+++ b/src/containers/components/Result/Result.scss
@@ -1,4 +1,4 @@
-@import 'src/common/styles/variables';
+@import 'src/common/styles/_variables.scss';
 
 .result {
   width          : $content-inside-width;
@@ -31,18 +31,75 @@
       color          : $text-color-bar;
 
       &:hover {
-        cursor          : pointer;
-        background-color: $bg-color-hover;
+        cursor: pointer;
       }
 
       &.active {
-        color: $text-color-bar-active;
+        color        : $text-color-bar-active;
+        border-bottom: 3px solid #000;
       }
     }
   }
 
   .result-content {
-    display        : flex;
-    justify-content: center;
+    padding-top   : 30px;
+    display       : flex;
+    flex-direction: column;
+    align-items   : center;
+    gap           : 50px;
+  }
+}
+
+.result-data {
+  width          : 450px;
+  padding-top    : 20px;
+  display        : flex;
+  flex-wrap      : wrap;
+  justify-content: center;
+  gap            : 20px;
+}
+
+.result-no-data {
+  justify-self: center;
+}
+
+.result-item {
+  width          : calc(100% / 3);
+  height         : $result-item-height;
+  display        : flex;
+  justify-content: center;
+  align-items    : center;
+  border         : 1px solid #000;
+
+  &:hover {
+    cursor          : pointer;
+    background-color: $bg-color-hover;
+  }
+}
+
+// Tablet
+// @media only screen and (min-width: 740px) and (max-width: 1024px) {
+
+// }
+
+// Mobile
+@media only screen and (max-width: 740px) {
+  .result {
+    width : $content-width-mobile;
+    height: $content-height-mobile;
+
+    .result-content {
+      padding-top: 20px;
+      gap        : 40px;
+    }
+  }
+
+  .result-data {
+    width : $content-inside-width-mobile;
+  }
+
+  .result-item {
+    width : $result-item-width-mobile;
+    height: $result-item-height-mobile;
   }
 }
