--- a/src/containers/components/Result/Result.scss
+++ b/src/containers/components/Result/Result.scss
@@ -28,15 +28,9 @@
       justify-content: center;
       align-items    : center;
       font-size      : $result-nav-item-font-size;
-      color          : $text-color-bar;
 
       &:hover {
         cursor: pointer;
-      }
-
-      &.active {
-        color        : $text-color-bar-active;
-        border-bottom: 3px solid #000;
       }
     }
   }
@@ -47,6 +41,46 @@
     flex-direction: column;
     align-items   : center;
     gap           : 50px;
+  }
+
+  &.light {
+    color           : $color-light;
+    background-color: $bg-color-light;
+
+    .result-nav {
+      .sub-nav-item {
+        color: $color-light;
+
+        &:hover {
+          cursor: pointer;
+        }
+
+        &.active {
+          color        : $color-light;
+          border-bottom: 3px solid $border-color-light;
+        }
+      }
+    }
+  }
+
+  &.dark {
+    color           : $color-dark;
+    background-color: $bg-color-dark;
+
+    .result-nav {
+      .sub-nav-item {
+        color: $color-dark;
+
+        &:hover {
+          cursor: pointer;
+        }
+
+        &.active {
+          color        : $color-dark;
+          border-bottom: 3px solid $border-color-dark;
+        }
+      }
+    }
   }
 }
 
@@ -69,11 +103,22 @@
   display        : flex;
   justify-content: center;
   align-items    : center;
-  border         : 1px solid #000;
 
   &:hover {
     cursor          : pointer;
     background-color: $bg-color-hover;
+  }
+
+  &.light {
+    color           : $color-light;
+    background-color: $bg-color-light;
+    border          : 1px solid $border-color-light;
+  }
+
+  &.dark {
+    color           : $color-dark;
+    background-color: $bg-color-dark;
+    border          : 1px solid $border-color-dark;
   }
 }
 
@@ -86,7 +131,6 @@
 @media only screen and (max-width: 740px) {
   .result {
     width : $content-width-mobile;
-    height: $content-height-mobile;
 
     .result-content {
       padding-top: 20px;
@@ -95,7 +139,7 @@
   }
 
   .result-data {
-    width : $content-inside-width-mobile;
+    width: $content-inside-width-mobile;
   }
 
   .result-item {
