--- a/src/custom/GlobalStyles/GlobalStyles.scss
+++ b/src/custom/GlobalStyles/GlobalStyles.scss
@@ -35,7 +35,7 @@ body {
   text-rendering  : optimizeSpeed;
   color           : $text-color;
   background-color: $bg-color;
-  overflow-y      : hidden;
+  overflow-y      : overlay;
   overflow-x      : hidden;
 }
 
