--- a/src/layouts/components/Loading/Loading.scss
+++ b/src/layouts/components/Loading/Loading.scss
@@ -29,18 +29,45 @@
     }
   }
 
-
   &.pause {
     img {
       animation-play-state: paused;
     }
   }
+
+  &.light {
+    background-color: $bg-color-light;
+
+    img {
+      filter: $filter-white;
+    }
+  }
+
+  &.dark {
+    background-color: $bg-color-dark;
+
+    img {
+      filter: $filter-black;
+    }
+  }
 }
+
+// &.dark {
+//   a {
+//     border          : 2px solid #fff;
+//     color           : #fff;
+//     background-color: #000;
+
+// img {
+//   filter: invert(100%) sepia(0%) saturate(7500%) hue-rotate(207deg) brightness(106%) contrast(106%);
+// }
+//   }
+// }
 
 // Mobile
 @media only screen and (max-width: 740px) {
   .loading {
-    width           : $loading-width-mobile;
-    height          : $loading-height-mobile;
+    width : $loading-width-mobile;
+    height: $loading-height-mobile;
   }
 }
