--- a/src/layouts/components/Nav/Nav.scss
+++ b/src/layouts/components/Nav/Nav.scss
@@ -7,6 +7,7 @@
   bottom          : 0;
   background-color: $bg-color-bar;
   box-shadow      : rgb(0 0 0 / 12%) 0px -5px 10px;
+  z-index: 200;
 
   .nav-wrapper {
     max-width      : $content-width;
@@ -22,6 +23,16 @@
       display: flex;
     }
   }
+
+  &.light {
+    color           : $color-light;
+    background-color: $bg-color-light;
+  }
+
+  &.dark {
+    color           : $color-dark;
+    background-color: $bg-color-dark;
+  }
 }
 
 .nav-item {
@@ -31,15 +42,27 @@
   flex-direction : column;
   justify-content: center;
   align-items    : center;
-  color          : $text-color-bar;
 
   &:hover {
-    cursor          : pointer;
-    background-color: $bar-item-hover-color;
+    cursor: pointer;
   }
 
-  &.active {
-    color: $text-color-bar-active;
+  &.light {
+    color           : $color-light-disable;
+    background-color: $bg-color-light;
+
+    &.active {
+      color: $color-light;
+    }
+  }
+
+  &.dark {
+    color           : $color-dark-disable;
+    background-color: $bg-color-dark;
+
+    &.active {
+      color: $color-dark;
+    }
   }
 }
 
