--- a/src/custom/GlobalStyles/GlobalStyles.scss
+++ b/src/custom/GlobalStyles/GlobalStyles.scss
@@ -49,7 +49,7 @@ label {
   font-weight: 600;
 }
 
-input {
+input, select {
   outline    : none;
   border     : none;
   line-height: 1.5;
@@ -78,6 +78,15 @@ textarea {
 button {
   border          : none;
   background-color: unset;
+}
+
+.ReactModal__Overlay--after-open {
+  &:has(.ReactModal__Content--after-open > .light) {
+    background-color: rgba(255, 255, 255, 0.75) !important;
+  }
+  &:has(.ReactModal__Content--after-open > .dark) {
+    background-color: rgba(0, 0, 0, 0.75) !important;
+  }
 }
 
 // Tablet
